2006-02-14 Perry
 PATCH: [ 1431205 ] Fix ViewWhitespace \r\n bug
 BUG: [ 1431012 ] View line differences adds additional EOL char
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1431197 ] Fix off-by-one highlight error
  Src: stringdiffs.cpp
 Fix button movement on LanguageSelect (broken by PATCH#1423461).
 Also add cvs id comment at top, and doxygen file label.
  Src\Common: LanguageSelect.cpp

2006-02-14 Kimmo
 BUG: [ 1197976 ] GeneratePatch file browse not intialized correctly
  Fix submitted by Perry
  Src: PatchDlg.cpp

2006-02-14 Perry
 PATCH: [ 1431131 ] Fix VS.NET 2003 compilation
  Src\Common: coretools.cpp scbarg.cpp scbarg.h sizecbar.cpp sizecbar.h
 Shrink Swedish dialog IDD_PROPPAGE_LARGE to same size as English
  (all controls already were the same size anyway)
  Src\Languages\Swedish: MergeSwedish.rc

2006-02-13 Perry
 PATCH: [ 1212124 ] File encoding GUI
  Src: DiffContext.cpp DiffFileInfo.cpp DiffFileInfo.h DiffItem.cpp
   DiffItem.h DiffThread.cpp DiffWrapper.cpp DirActions.cpp
   DirScan.cpp DirView.cpp DirView.h DirViewColItems.cpp FileLocation.h
   MainFrm.cpp Merge.dsp Merge.rc MergeDoc.cpp MergeDoc.h OpenDlg.cpp
   codepage_detect.cpp codepage_detect.h resource.h
  NEW Src: FileTextEncoding.cpp FileTextEncoding.h IntToIntMap.h
   LoadSaveCodepageDlg.cpp LoadSaveCodepageDlg.h MergeDocEncoding.cpp
   dlgutil.cpp dlgutil.h

2006-02-12 Perry
 Adjust whitespace to match English translation
 Also update Russian options/editor controls to match English
  Src\Languages\Russian: MergeRussian.rc
  Src\Languages\Slovak: MergeSlovak.rc
  Src\Languages\Swedish: MergeSwedish.rc
  Src\Languages\Turkish: MergeTurkish.rc
 PATCH: [ 1424681 ] Widen labels on unpacker dialog
  Src: Merge.rc
  Src\Languages: Merge*.rc

2006-02-11 Perry
 PATCH: [ 1429517 ] Fix coretools.cpp compilation (for MakeResDll)
  Src/Common: coretools.cpp
 PATCH: [ 1427838 ] code cleanup bottom of merge.cpp
  Src: Merge.cpp
 Synchronizing Turkish translation to English where feasible.